update link to the home page

--- a/proj1/index.html
+++ b/proj1/index.html
@@ -242,6 +242,6 @@
 
 	<hr>
 
-	<p>The website link is <a href="https://zhaominl.github.io/proj-webpage-qq360/proj1/index.html">https://zhaominl.github.io/proj-webpage-qq360/proj1/index.html</a></p>
+	<p>The website link is <a href="https://zhaominl.github.io/project-webpage-qq360/">https://zhaominl.github.io/project-webpage-qq360/</a></p>
 
 </body></html>	
