add potential extra credit

--- a/proj1/index.html
+++ b/proj1/index.html
@@ -307,7 +307,7 @@
 
 									<li>
 										<b>
-											Describe the tradeoffs between speed, memory usage, and antialiasing power between the three various 
+											Describe the tradeoffs between speed, memory usage, and antialiasing power between the three various
 											techniques (pixel sampling, level sampling, or the number of samples per pixel).
 										</b>
 
@@ -355,6 +355,29 @@
 								</center>
 
 								<hr>
+								<h2 id="extra_credit">
+									Potential Extra Credit</h3>
+
+
+									<p>
+										For this part, we seemingly randomized the colors by multiplying color to rand(0,1) when we assigning them to the sample buffer. The results are these
+										beautiful mosaic-like pictures. Also these pictures have geograpic meaning. As the land becomes dryer, the color becomes more
+										blue.</br>
+										For this example, we use the picture "/texmap/test1.svg".
+									</p>
+
+									<center>
+
+										<img src="img/competition_1.png" class="task_img">
+
+
+										<img src="img/competition_16.png" class="task_img">
+
+
+									</center>
+
+									<p><hr></p>
+
 
 								<p>The website link is <a href="https://zhaominl.github.io/project-webpage-qq360/">https://zhaominl.github.io/project-webpage-qq360/</a></p>
 
