--- a/proj1/index.html
+++ b/proj1/index.html
@@ -361,14 +361,14 @@
 
 									<p>
 										For this part, we seemingly randomized the colors by multiplying color to rand(0,1) when we assigning them to the sample buffer. The results are these
-										beautiful mosaic-like pictures. Also these pictures have geograpic meaning. As the land becomes dryer, the color becomes more
+										beautiful mosaic-like pictures. Also these pictures have geographical meaning. As the land becomes dryer, the color becomes more
 										blue.</br>
 										For this example, we use the picture "/texmap/test1.svg".
 									</p>
 
 									<center>
 
-										<img src="img/competition_1.png" class="task_img">
+										<img src="img/competition_1_1.png" class="task_img">
 
 
 										<img src="img/competition_16.png" class="task_img">
