fixed small html bug

--- a/proj2/index.html
+++ b/proj2/index.html
@@ -75,7 +75,7 @@
     <ol>
         <li>
             For each edge formed by neighboring control points, find a new point on that edge using linear interpolation with \(t\in[0,1]\). 
-            This can be calculated by \(p_i\'=p_i * (1-t) + p_(i+1) * t\).
+            This can be calculated by \(p_i'=p_i * (1-t) + p_{i+1} * t\).
         </li>
         <li>
             Connect all neighboring new point to form another level of control points.
