--- a/proj3-1/index.html
+++ b/proj3-1/index.html
@@ -557,7 +557,14 @@
 
 
         </div>
-
+	<br/>
+	<h2 align="middle">Contribution(20 Points)</h2>
+	<p>
+		Our team includes Zhiqi Yan and Chaomin Li. Each person came up with his
+		implementations, and we together did the code review and optimization. The final version includes the code from both of us.
+		For the report, Zhiqi wrote the Overview, Part 2 and Part4, and Chaomin wrote Part 1, 3, and 5. We contributed equally to the project report.
+		During the whole homework, we work together, learn from us, and reinforce the understanding of the class contents together.
+	</p>
 
     </o>
 
