--- a/proj3-1/index.html
+++ b/proj3-1/index.html
@@ -558,7 +558,7 @@
 
         </div>
 	<br/>
-	<h2 align="middle">Contribution(20 Points)</h2>
+	<h2 align="middle">Contribution</h2>
 	<p>
 		Our team includes Zhiqi Yan and Chaomin Li. Each person came up with his
 		implementations, and we together did the code review and optimization. The final version includes the code from both of us.
