--- a/proj3-2/index.html
+++ b/proj3-2/index.html
@@ -96,7 +96,7 @@
             By comparing the pictures below, we see that with large \(\alpha\) (0.5), the dragon looks diffuse. The surfuce looks rough and does not reflect its environmental details.
             This is because the microfacets are uneven and reflecting lights to many different directions. Contrast to the large \(\alpha\), dragon with a small \(\alpha\) (0.005) appears
             to be more glossy and mirror-like, and the environmental details are reflected on the statue's surface. This is because, with a small \(\alpha\), the macro surface becomes
-            smoother, and the microfacets are more aligned together.
+            smoother, and the microfacets are more aligned together. However, as we see in picture, a small \(\alpha\) might cause more noise (white dots) when rendering.
         </p>
         <div align="middle">
             <table style="width:100%">
